--- a/bower.json
+++ b/bower.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "dependencies": {
     "angular": "^1.4.0",
-    "bootstrap-sass-official": "^3.2.0",
     "angular-animate": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0",
-    "flat-ui": "^2.3.0"
+    "angular-touch": "^1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
