--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "bloki",
   "private": true,
+  "scripts": {
+    "test": "grunt test",
+    "start": "node svr/index.js"
+  }
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "connect-modrewrite": "^0.9.0",
