--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "lodash": "^4.15.0",
+    "path": "^0.12.7",
+    "winston": "^2.2.0",
+    "winston-daily-rotate-file": "^1.3.0"
   }
 }
