--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "test": "grunt test",
-    "start": "node svr/index.js"
+    "start": "node src/index.js"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
@@ -40,8 +40,11 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
+    "colors": "^1.1.2",
     "lodash": "^4.15.0",
+    "nconf": "^0.8.4",
     "path": "^0.12.7",
+    "q": "^1.4.1",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.3.0"
   }
