--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -21,9 +21,9 @@ engines:
     enabled: true
 ratings:
   paths:
-  - app/**
-  - svr/**
-  - "**.js"
+  - app/**/*.{scss,sass,css,js,html}
+  - src/**/*.js
+  - test/spec/**/*.js
 exclude_paths:
   - Gruntfile.js
   - test/karma.conf.js
