--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "nconf": "^0.8.4",
     "path": "^0.12.7",
     "q": "^1.4.1",
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.3.0"
   }
