--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
+    "lockfile": "^1.0.1",
     "lodash": "^4.15.0",
     "nconf": "^0.8.4",
     "path": "^0.12.7",
